--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.5",
+    "axios": "^1.6.7",
     "firebase": "^10.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.2",
-    "react-spinners": "^0.13.8"
+    "react-select": "^5.8.0",
+    "react-spinners": "^0.13.8",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
