--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.7",
+    "axios": "^1.6.8",
     "firebase": "^10.7.2",
+    "fuse.js": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.21.2",
     "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "stripe": "^14.22.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
