--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
     "recoil": "^0.7.7",
+    "shippo": "^2.4.2",
     "stripe": "^14.22.0"
   },
   "devDependencies": {
