--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.21.2",
     "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
+    "recharts": "^2.12.7",
     "recoil": "^0.7.7",
     "shippo": "^2.4.2",
     "stripe": "^14.22.0"
