--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-paginate": "^8.2.0",
+    "react-pdftotext": "^1.3.3",
     "react-router-dom": "^6.21.2",
     "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
+    "react-to-print": "^2.15.1",
     "recharts": "^2.12.7",
     "recoil": "^0.7.7",
     "shippo": "^2.4.2",
