--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.8",
     "firebase": "^10.7.2",
     "fuse.js": "^7.0.0",
+    "qrcode.react": "^4.0.1",
     "react": "^18.2.0",
     "react-calendly": "^4.3.1",
     "react-dom": "^18.2.0",
