--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-medium-image-zoom": "^5.2.10",
     "react-paginate": "^8.2.0",
     "react-pdftotext": "^1.3.3",
     "react-router-dom": "^6.21.2",
